chore: minor fixes

--- a/src/components/loading.module.css
+++ b/src/components/loading.module.css
@@ -18,3 +18,10 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  font-family: "Manrope", sans-serif !important;
+  font-weight: normal;
+  background: white;
+  margin-top: calc(-40px);
+}
